--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test": "mocha tests --recursive"
   },
   "dependencies": {
+    "escape-string-regexp": "^4.0.0",
+    "espree": "^9.3.1",
+    "esutils": "^2.0.3",
     "requireindex": "^1.2.0"
   },
   "devDependencies": {
